--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/exam
     username: postgres
-    password: rAyWMlPeVsAs4Du
+    password: root
   jpa:
     hibernate:
 #      ddl-auto: create
